--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  width: '1366px';
-  height: '768px';
+  width: 1366px;
+  height: 768px;
 }
 
 #title {
@@ -36,4 +36,19 @@ body {
 
 #red {
   background-color: red;
+}
+
+#pixel-board {
+  width: 510px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.pixel {
+  width: 100px;
+  height: 100px;
+  margin-top: -5px;
+  margin-left: -1px;
+  display: inline-block;
+  border: 1px solid black;
 }
