--- a/style.css
+++ b/style.css
@@ -50,5 +50,6 @@ body {
   margin-top: -5px;
   margin-left: -1px;
   display: inline-block;
+  background-color: white;
   border: 1px solid black;
 }
