--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@ body {
 
 #color-palette {
   width: 550px;
-  height: 135px;
+  height: 70px;
   margin: 0 auto;
   text-align: center;
 }
 
 .color {
-  width: 100px;
-  height: 100px;
-  margin: 15px;
+  width: 40px;
+  height: 40px;
+  margin: 6px;
   display: inline-block;
   border: 1px solid black;
 }
@@ -52,4 +52,10 @@ body {
   display: inline-block;
   background-color: white;
   border: 1px solid black;
+}
+
+.select {
+  width: 50px;
+  height: 50px;
+  background-color: purple;
 }
