--- a/style.css
+++ b/style.css
@@ -8,18 +8,11 @@ body {
 }
 
 #color-palette {
-  width: 550px;
+  width: 220px;
   height: 70px;
   margin: 0 auto;
+  display: flex;
   text-align: center;
-}
-
-.color {
-  width: 40px;
-  height: 40px;
-  margin: 6px;
-  display: inline-block;
-  border: 1px solid black;
 }
 
 #black {
@@ -36,6 +29,13 @@ body {
 
 #red {
   background-color: red;
+}
+
+.color {
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  border: 1px solid black;
 }
 
 #pixel-board {
