--- a/style.css
+++ b/style.css
@@ -9,32 +9,32 @@ body {
 
 #color-palette {
   width: 215px;
-  height: 70px;
-  margin: 0 auto;
+  height: 50px;
   display: flex;
+  margin: 0 auto;
   text-align: center;
 }
 
-.black {
+#black {
   background-color: black;
 }
 
-.cyan {
+#cyan {
   background-color: cyan;
 }
 
-.green {
+#green {
   background-color: green;
 }
 
-.red {
+#red {
   background-color: red;
 }
 
 .color {
   width: 40px;
   height: 40px;
-  margin: 5px;
+  margin: 0 5px;
   border: 1px solid black;
 }
 
@@ -55,6 +55,18 @@ body {
 }
 
 .selected {
-  width: 50px;
+  width: 45px;
+  height: 45px;
+}
+
+#button {
+  width: 205px;
+  height: 50px;
+  margin: 10px auto 15px auto;
+  /* background-color: aqua; */
+}
+
+#clear-board {
+  width: 205px;
   height: 50px;
 }
