--- a/style.css
+++ b/style.css
@@ -1,34 +1,48 @@
 body {
-  width: 1366px;
-  height: 768px;
+  background-image: url('images/paisagem.jpg');
 }
 
-#title {
+main {
+  margin-top: 6%;
   text-align: center;
+}
+
+#inputs {
+  width: 205px;
+  margin: 5px auto 15px;
+}
+
+#board-size {
+  width: 45%;
+  height: 30px;
+  border-radius: 30px;
+  border: 3px solid black;
+}
+
+#generate-board {
+  width: 45%;
+  height: 30px;
+  font-size: 15px;
+  border-radius: 30px;
+  background-color: green;
+  border: 5px solid darkgreen;
+}
+
+#clear-board {
+  width: 205px;
+  height: 50px;
+  font-size: 20px;
+  margin-top: 9px;
+  border-radius: 30px;
+  background-color: red;
+  border: 5px solid darkred;
 }
 
 #color-palette {
   width: 215px;
   height: 50px;
   display: flex;
-  margin: 0 auto;
-  text-align: center;
-}
-
-#black {
-  background-color: black;
-}
-
-#cyan {
-  background-color: cyan;
-}
-
-#green {
-  background-color: green;
-}
-
-#red {
-  background-color: red;
+  margin: -15px auto 0;
 }
 
 .color {
@@ -38,10 +52,13 @@ body {
   border: 1px solid black;
 }
 
+.selected {
+  width: 45px;
+  height: 45px;
+}
+
 #pixel-board {
-  width: 220px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .pixel {
@@ -52,21 +69,4 @@ body {
   display: inline-block;
   background-color: white;
   border: 1px solid black;
-}
-
-.selected {
-  width: 45px;
-  height: 45px;
-}
-
-#button {
-  width: 205px;
-  height: 50px;
-  margin: 10px auto 15px auto;
-  /* background-color: aqua; */
-}
-
-#clear-board {
-  width: 205px;
-  height: 50px;
 }
